change photo size

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>Iryna Naiko</h1>
-    <img src="img/foto-cv.jpg" alt="fotoIrynaNaiko">
+    <img src="img/foto-cv.jpg" alt="fotoIrynaNaiko" width=200px;>
     <h2>Phone:</h2>
     <p>+38(050) 940 42 70</p>
     <h2>Email:</h2>
@@ -33,7 +33,6 @@
         <li>SQL</li>
         <li>HTML, CSS</li>
     </ul>
-
     <p>Development Tools</p>
     <ul>
         <li>Sublime Text</li>
@@ -41,7 +40,6 @@
         <li>Visual Studio</li>
     </ul>
     <hr>
-
     <h2>EXPERIENCE</h2>
     <p><b>SoftServe ITA Student – HTML/CSS/JS Project description:</b> online shopping web page design. During this
         project I was working with programs such us: HTML, CSS, JS, jQuery, Bootstrap. </p>
@@ -69,9 +67,6 @@
     <hr>
     <h2>HOBBIES </h2>
     <p>Sport and reading</p>
-
-
-
 </body>
 
 </html>
