--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <h1>Iryna Naiko</h1>
-    <img src="img/foto-cv.jpg" alt="fotoIrynaNaiko" width=200px;>
+    <img src="img/foto-cv.jpg" alt="fotoIrynaNaiko" style="width:200px;">
     <h2>Phone:</h2>
     <p>+38(050) 940 42 70</p>
     <h2>Email:</h2>
